# Fall-2020---Bactracking-Algorithm-N-queens---Console---Individual-Project

./: .gitignore  CMakeLists.txt  Main.cpp  NQueens.cpp  NQueens.hpp
test/: CMakeLists.txt
